# QuickJax

./: .gitignore  DEVELOPMENT.md  DEVELOPMENT.zh-CN.md  LICENSE  README.md  README.zh-CN.md  build_bundle.sh  demo.py  pyproject.toml
quickjax/: __init__.py  backend.py
quickjax/js/: mathjax_bundle.js
renderer_src/: index.js  package.json
tests/: test_render.py
