[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quickjax"
version = "0.1.0"
description = "Zero-dependency MathJax v4 SVG renderer for Python, powered by QuickJS"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = ["quickjs"]

[tool.setuptools.packages.find]
include = ["quickjax*"]

[tool.setuptools.package-data]
quickjax = ["js/*.js"]
